--- a/client/styles.css
+++ b/client/styles.css
@@ -10,25 +10,20 @@ body {
   margin: 0;
 }
 .scoreboard{
+  padding: 10px;
+  width: 200px;
+  height: 40px;
+  border-radius: 5px;
+  border: 2px solid white;
+  background-color: #2c3e50;
+  color: white;
   font-family: Arkhip;
   position: absolute;
   top: 20px;
   left: 20px;
 }
 svg.board {
-  background-color: rgb(231, 76, 60);
-}
-
-svg circle {
-  fill: blue;
-  r: 10;
-  transform: 1s;
-}
-
-
-.enemy {
-  height: 50px;
-  width: 50px;
-  background-color: blue;
+/*  background-color: rgb(231, 76, 60); */
+  background-image: url(bg.jpg);
 }
 
